--- a/index.html
+++ b/index.html
@@ -7,124 +7,77 @@
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
-    <section id="food-menu">
-        <h2 class="food-menu-heading">Food Menu &#9743;</h2>
-        <div class="line"></div>
-        <div class="food-menu-container container">
-          <div class="food-menu-item">
-            <div class="food-img">
-              <img src="img/p-5.png" alt="" />
-            </div>
-            <div class="food-description">
-              <h2 class="food-titile">Food Menu Item 1</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                quae.
-              </p>
-              <p class="food-price">Price: &#8377; 250</p>
-            </div>
+    <section class="first">
+        <div class="container">
+          <div class="About_head_1">
+            <h2>ABOUT DOON PIZZA</h2>
           </div>
-  
-          <div class="food-menu-item">
-            <div class="food-img">
-              <img
-                src="img/banner-2.png"
-                alt="error"
-              />
-            </div>
-            <div class="food-description">
-              <h2 class="food-titile">Food Menu Item 2</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                quae.
-              </p>
-              <p class="food-price">Price: &#8377; 250</p>
-            </div>
-          </div>
-          <div class="food-menu-item">
-            <div class="food-img">
-              <img src="img/p-7.png" alt="" />
-            </div>
-            <div class="food-description">
-              <h2 class="food-titile">Food Menu Item 3</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                quae.
-              </p>
-              <p class="food-price">Price: &#8377; 250</p>
-            </div>
-          </div>
-          <div class="food-menu-item">
-            <div class="food-img">
-              <img src="img/banner-4.png" alt="" />
-            </div>
-            <div class="food-description">
-              <h2 class="food-titile">Food Menu Item 4</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                quae.
-              </p>
-              <p class="food-price">Price: &#8377; 250</p>
-            </div>
-          </div>
-          <div class="food-menu-item">
-            <div class="food-img">
-              <img src="img/banner-5.png" alt="" />
-            </div>
-            <div class="food-description">
-              <h2 class="food-titile">Food Menu Item 5</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                quae.
-              </p>
-              <p class="food-price">Price: &#8377; 250</p>
-            </div>
-          </div>
-          <div class="food-menu-item">
-            <div class="food-img">
-              <img src="img/p-2.png" alt="" />
-            </div>
-            <div class="food-description">
-              <h2 class="food-titile">Food Menu Item 6</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                quae.
-              </p>
-              <p class="food-price">Price: &#8377; 250</p>
-            </div>
-          </div>
-          
-          <div class="food-menu-item">
-            <div class="food-img">
-              <img
-                src="img/p-4.png"
-                alt="error"
-              />
-            </div>
-            <div class="food-description">
-              <h2 class="food-titile">Food Menu Item 2</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                quae.
-              </p>
-              <p class="food-price">Price: &#8377; 250</p>
-            </div>
-            <div class="food-menu-item">
-                <div class="food-img">
-                  <img
-                    src="img/p-3.png"
-                    alt="error">
+          <div class="main_head_1">
+          <div class="box">
+            <div class="About_first_para_1">
+                <div class="About_head_2">
+                  <h2>WHO WE ARE</h2>
                 </div>
-                <div class="food-description">
-                  <h2 class="food-titile">Food Menu Item 2</h2>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Non,
-                    quae.
-                  </p>
-                  <p class="food-price">Price: &#8377; 250</p>
+                <div class="About_head_3">
+                    <h2>There’s nothing cookie-cutter about Pizza Hut. Not our pizzas. Not our people. And definitely not the<br> way we live life. Around here, we don’t settle for anything less than food we’re proud to serve. And we<br> don’t just clock in. Not when we can also become our best, make friends, and have fun while we’re at it.<br> <span>We’re the pizza company that lives life unboxed.</span></h2>
                 </div>
+            </div>
+            <div class="About_first_para_2">
+                <div class="About_head_4">
+                    <h2>We’re not for people who want to blend in: pushing boundaries is part of our heritage. We have more than 16,000 restaurants and 350,000 team members in more than 100 countries. Whether it’s the original Stuffed Crust or putting a pizza in outer space, we never stop driving ourselves to deliver hot  pizzas, fast every time – anywhere you want to enjoy it.</h2>
+                </div>
+            </div>
+            <div class="About_first_para_3">
+                <div class="About_head_5">
+                  <h2>WHAT WE’RE ABOUT</h2>
+                </div>
+                <div class="About_head_6">
+                    <h2>
+                        At Pizza Hut, we don’t just make pizza. We make people happy. Pizza Hut was built on the belief that<br> pizza night should be special, and we carry that belief into everything we do. With more than 55 years of<br> experience under our belts, we understand how to best serve our customers through tried and true<br> service principles: We create food <span>
+                        we’re proud to serve and deliver it fast, with a smile.</span></h2>
+                </div>
+            </div>
+            <div class="About_first_para_4">
+                <div class="About_head_7">
+                  <h2>WHERE WE COME FROM</h2>
+                </div>
+                <div class="About_head_8">
+                   <h2>
+                    In 1958, two brothers borrowed $600 from their mom to open a pizza place in Wichita, Kansas. They<br> named it Pizza Hut, because their sign only had room for eight letters. How profound! Soon, the<br> restaurant grew. Why? The pizza was awesome. The service felt like home. And the customers were<br> treated like family. And we’ve been delivering that same food and service ever since.
+                   </h2>                   
+ 
+                </div>
+            </div>
+            <div class="About_first_para_5">
+                <div class="About_head_9">
+                  <h2>FOR THE LOVE OF PIZZA SINCE 1958</h2>
+                </div>
+                <div class="About_head_10">
+                   <h2>
+                    From day one, the Carney brothers could look their customers in the eye and promise them the finest<br> pizza in town — because they knew the farmers who grew the ingredients, and they knew those<br> farmers cared about quality. Since then, our farmers have grown right alongside us, and the ingredients<br> we use are still our highest priority. No one loves pizza more than Pizza Hut. That’s why pizza is in our<br> name — and always will be.
+                   </h2>                  
+ 
+                </div>
+            </div>
+            <div class="About_first_para_6">
+                <div class="About_head_11">
+                  <h2>FOR THE LOVE OF PIZZA SINCE 1958</h2>
+                </div>
+                <div class="About_head_12">
+                   <h2>
+                    In June 1996, Pizza Hut made its foray into India with a restaurant in Bangalore and was the<br> first international restaurant chain to pioneer this category. The restaurant brand offers an exciting menu<br> consisting of its signature pizzas, appetizers, pastas, desserts and beverages. Its trademark dining<br> experience has been recognized by Brand Equity to make it the ‘Most Trusted Food Service Brand’ for<br> 11 years in a row. Pizza Hut is the most preferred pizza brand in India, given its freshest, tastiest and<br> affordable Pizzas.
+                   </h2>                  
+ 
+                </div>
+            </div>
+
+
+
+          </div>
+
+          </div>
         </div>
-      </section>
-  
+    </section>
+    
 </body>
 </html>
